<resources>
    <string name="app_name">Let\'s get fit</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="ready">Готово</string>
    <string name="trainings">Тренировки</string>
    <string name="nutritions">Питание</string>
    <string name="motivation">Мотивация</string>
    <string name="example">USERNAME_EX</string>
    <string name="Menu">Меню</string>
</resources>